syntax = "proto3";

package erda.dop.projecthome;
option go_package = "github.com/erda-project/erda-proto-go/dop/projecthome/pb";
import "google/api/annotations.proto";
import "common/openapi.proto";

service ProjectHomeService {
  option(erda.common.openapi_service) = {
    service : "dop",
    auth : {
      check_login : true,
      check_token: true,
    }
  };

  rpc GetProjectHome(GetProjectHomeRequest) returns(GetProjectHomeResponse) {
    option(google.api.http) = {
      get : "/api/project-home/{projectID}",
    };
    option(erda.common.openapi) = {
      path : "/api/project-home/{projectID}",
    };
  }

  rpc CreateOrUpdateProjectHome(CreateOrUpdateProjectHomeRequest)
      returns(CreateOrUpdateProjectHomeResponse) {
    option(google.api.http) = {
      post : "/api/project-home/{projectID}",
    };
    option(erda.common.openapi) = {
      path : "/api/project-home/{projectID}",
    };
  }
}

message ProjectHome {
  string readme = 1;
  repeated Link links = 2;
}

message Link {
  int64 id = 1;
  string name = 2;
  string url = 3;
}

message GetProjectHomeRequest { string projectID = 1; }

message GetProjectHomeResponse { ProjectHome data = 1; }

message CreateOrUpdateProjectHomeRequest {
  string projectID = 1;
  string readme = 2;
  repeated Link links = 3;
}

message CreateOrUpdateProjectHomeResponse {}